fix: 🧪 Menu visibility

--- a/src/components/molecules/Menu/index.module.css
+++ b/src/components/molecules/Menu/index.module.css
@@ -6,7 +6,7 @@
 .menu {
   font-family: Varela Round;
   font-weight: 400;
-  font-size: 1em;
+  font-size: 1.25em;
 }
 
 .button {
@@ -29,6 +29,7 @@
 
   z-index: 1;
 
+  background-color: #fff;
   box-shadow: 0px 8px 10px 1px rgba(0, 0, 0, 0.14),
     0px 3px 14px 2px rgba(0, 0, 0, 0.12), 0px 5px 5px -3px rgba(0, 0, 0, 0.2);
 
@@ -48,5 +49,6 @@
 }
 
 .link {
+  text-decoration: none;
   color: #696969;
 }
